added two new recipes along with yummy looking pictures of said recipes

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>yummy yum resipees</h1>
     <a href="recipes/poopy-sandwich.html">poopy sandwich</a>
     <img src="images/yum-sandwich.jpeg" alt="a guy enjoying a tasty sandwich">
+    <a href="recipes/grass.html">grass</a>
+    <img src="images/download.jpeg" alt="a guy enjoying grass, maybe a little too much">
+    <a href="recipes/shorts.html">shorts</a>
+    <img src="images/shorts.jpeg" alt="a pair of shorts">
 </body>
 </html>
