made the shorts recipe funnier

--- a/recipes/shorts.html
+++ b/recipes/shorts.html
@@ -16,7 +16,10 @@
     <p>steps:</p>
     <ol>
         <li>first you can either <a href="https://www.wikihow.com/Make-Shorts">make your own shorts</a> or choose from a variety of ready made shorts at your nearest retailer!</li>
-        <li>with shorts in hand it's time to enjoy those scrumptuous shorts we've been waiting for, just shove them in your mouth, chew, and continue chewing, and continue chewing, until one day those shorts are able to be swallowed</li>
+        <li>with shorts in hand it's time to enjoy those scrumptuous shorts we've been waiting for, lets tart with shoving them in your mouth </li>
+        <li>begin chewing</li>
+        <li>and continue chewing</li>
+        <li>repeat step 4 until one day said shorts can feasibly be swallowed without killing you</li>
     </ol>
 </body>
 </html>
