just made the code look neater

--- a/recipes/shorts.html
+++ b/recipes/shorts.html
@@ -10,12 +10,14 @@
     <h1>shorts</h1>
     <p>ingredients</p>
     <ul>
-        <li>shorts can be made from virtually any ingredient, however most choose materials which would typically be used to make clothing such as cotton or perhaps even a polyester blend</li>
+        <li>shorts can be made from virtually any ingredient, however most choose materials which would 
+            typically be used to make clothing such as cotton or perhaps even a polyester blend</li>
         
     </ul>
     <p>steps:</p>
     <ol>
-        <li>first you can either <a href="https://www.wikihow.com/Make-Shorts">make your own shorts</a> or choose from a variety of ready made shorts at your nearest retailer!</li>
+        <li>first you can either <a href="https://www.wikihow.com/Make-Shorts">make your own shorts</a> or choose 
+            from a variety of ready made shorts at your nearest retailer!</li>
         <li>with shorts in hand it's time to enjoy those scrumptuous shorts we've been waiting for, lets tart with shoving them in your mouth </li>
         <li>begin chewing</li>
         <li>and continue chewing</li>
