--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MMMMMMMMM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>yummy yum resipees</h1>
-    <a href="recipes/poopy-sandwich.html">poopy sandwich</a>
-    <img src="images/yum-sandwich.jpeg" alt="a guy enjoying a tasty sandwich">
-    <a href="recipes/grass.html">grass</a>
-    <img src="images/download.jpeg" alt="a guy enjoying grass, maybe a little too much">
-    <a href="recipes/shorts.html">shorts</a>
-    <img src="images/shorts.jpeg" alt="a pair of shorts">
+    <h1 class="text">yummy yum resipees</h1>
+    <a class = "text" href="recipes/poopy-sandwich/poopy-sandwich.html">poopy sandwich</a>
+    <img class="picture" src="images/yum-sandwich.jpeg" alt="a guy enjoying a tasty sandwich">
+    <a class="text" href="recipes/grass/grass.html">grass</a>
+    <img class="picture" src="images/download.jpeg" alt="a guy enjoying grass, maybe a little too much">
+    <a class="text" href="recipes/shorts/shorts.html">shorts</a>
+    <img class= "picture" src="images/shorts.jpeg" alt="a pair of shorts">
 </body>
 </html>
