made a new recipe

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <img class="picture" src="images/download.jpeg" alt="a guy enjoying grass, maybe a little too much">
     <a class="text" href="recipes/shorts/shorts.html">shorts</a>
     <img class= "picture" src="images/shorts.jpeg" alt="a pair of shorts">
+    <a class="rick text" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Garden Vegetable Gnocchi</a>
+    <img class = "picture" src="images/garden-vegetable-gnome.jpg" alt="delicious garden vegetable gnome">
 </body>
 </html>
